// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PopupChangePassword > Emits close > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupChangePassword > Emits close > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupChangePassword > Emits close > Storage.get('THEME') 1`] = `null`;

exports[`PopupChangePassword > Emits close > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupChangePassword > Emits close > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupChangePassword > Emits close > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupChangePassword > Emits close > allCalls 1`] = `[]`;

exports[`PopupChangePassword > Emits close > document.body.outerHTML 1`] =
  `"<body class="theme--system"></body>"`;

exports[`PopupChangePassword > Emits close > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupChangePassword > Emits close > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupChangePassword > Emits close > openedPopup 1`] = `undefined`;

exports[`PopupChangePassword > Emits close > selectedTheme 1`] = `"System"`;

exports[`PopupChangePassword > Emits close > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "set": [Function],
    "size": 0,
    "store": [Function],
  },
  "username": "",
}
`;

exports[`PopupChangePassword > Emits close > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupChangePassword > Mounts > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupChangePassword > Mounts > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupChangePassword > Mounts > Storage.get('THEME') 1`] = `null`;

exports[`PopupChangePassword > Mounts > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupChangePassword > Mounts > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupChangePassword > Mounts > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupChangePassword > Mounts > allCalls 1`] = `[]`;

exports[`PopupChangePassword > Mounts > document.body.outerHTML 1`] =
  `"<body class="theme--system"></body>"`;

exports[`PopupChangePassword > Mounts > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupChangePassword > Mounts > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupChangePassword > Mounts > openedPopup 1`] = `undefined`;

exports[`PopupChangePassword > Mounts > selectedTheme 1`] = `"System"`;

exports[`PopupChangePassword > Mounts > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "set": [Function],
    "size": 0,
    "store": [Function],
  },
  "username": "",
}
`;

exports[`PopupChangePassword > Mounts > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[
  `PopupChangePassword > Shows default error message when none provided > KeyStore.getKey() 1`
] = `undefined`;

exports[
  `PopupChangePassword > Shows default error message when none provided > Storage.get('MENU_WIDTH') 1`
] = `null`;

exports[
  `PopupChangePassword > Shows default error message when none provided > Storage.get('THEME') 1`
] = `null`;

exports[
  `PopupChangePassword > Shows default error message when none provided > Storage.get('UPDATE_SEEN') 1`
] = `null`;

exports[
  `PopupChangePassword > Shows default error message when none provided > Storage.get('UPDATE_STRATEGY') 1`
] = `null`;

exports[
  `PopupChangePassword > Shows default error message when none provided > Storage.get('USERNAME') 1`
] = `null`;

exports[
  `PopupChangePassword > Shows default error message when none provided > allCalls 1`
] = `[]`;

exports[
  `PopupChangePassword > Shows default error message when none provided > document.body.outerHTML 1`
] = `"<body class="theme--system"></body>"`;

exports[
  `PopupChangePassword > Shows default error message when none provided > mockDb 1`
] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[
  `PopupChangePassword > Shows default error message when none provided > noteState 1`
] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[
  `PopupChangePassword > Shows default error message when none provided > openedPopup 1`
] = `undefined`;

exports[
  `PopupChangePassword > Shows default error message when none provided > selectedTheme 1`
] = `"System"`;

exports[
  `PopupChangePassword > Shows default error message when none provided > syncState 1`
] = `
{
  "appError": AppError {
    "code": 11,
    "display": {
      "form": true,
    },
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "set": [Function],
    "size": 0,
    "store": [Function],
  },
  "username": "",
}
`;

exports[
  `PopupChangePassword > Shows default error message when none provided > updateState 1`
] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupChangePassword > Shows error message > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupChangePassword > Shows error message > Storage.get('MENU_WIDTH') 1`] =
  `null`;

exports[`PopupChangePassword > Shows error message > Storage.get('THEME') 1`] = `null`;

exports[`PopupChangePassword > Shows error message > Storage.get('UPDATE_SEEN') 1`] =
  `null`;

exports[`PopupChangePassword > Shows error message > Storage.get('UPDATE_STRATEGY') 1`] =
  `null`;

exports[`PopupChangePassword > Shows error message > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupChangePassword > Shows error message > allCalls 1`] = `[]`;

exports[`PopupChangePassword > Shows error message > document.body.outerHTML 1`] =
  `"<body class="theme--system"></body>"`;

exports[`PopupChangePassword > Shows error message > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupChangePassword > Shows error message > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupChangePassword > Shows error message > openedPopup 1`] = `undefined`;

exports[`PopupChangePassword > Shows error message > selectedTheme 1`] = `"System"`;

exports[`PopupChangePassword > Shows error message > syncState 1`] = `
{
  "appError": AppError {
    "code": 11,
    "display": {
      "form": true,
    },
    "message": "Mock error",
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "set": [Function],
    "size": 0,
    "store": [Function],
  },
  "username": "",
}
`;

exports[`PopupChangePassword > Shows error message > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupChangePassword > Validates fields and submits > KeyStore.getKey() 1`] =
  `CryptoKey {}`;

exports[
  `PopupChangePassword > Validates fields and submits > Storage.get('MENU_WIDTH') 1`
] = `null`;

exports[`PopupChangePassword > Validates fields and submits > Storage.get('THEME') 1`] =
  `null`;

exports[
  `PopupChangePassword > Validates fields and submits > Storage.get('UPDATE_SEEN') 1`
] = `null`;

exports[
  `PopupChangePassword > Validates fields and submits > Storage.get('UPDATE_STRATEGY') 1`
] = `null`;

exports[
  `PopupChangePassword > Validates fields and submits > Storage.get('USERNAME') 1`
] = `"d"`;

exports[`PopupChangePassword > Validates fields and submits > allCalls 1`] = `
[
  [
    "request",
    {
      "calledWith": {
        "body": "{"username":"d","password":"1","notes":[],"deleted_note_ids":[]}",
        "headers": {
          "Content-Security-Policy": "default-src 'self'; connect-src http://localhost:8000;",
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
      "name": "/auth/login",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "accessToken": "test-token",
        "username": "d",
      },
      "name": "set_access_token",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": true,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "note": {
          "content": {
            "body": "",
            "delta": {
              "ops": [],
            },
            "title": "",
          },
          "id": "id",
          "timestamp": 0,
        },
      },
      "name": "new_note",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "notes": [
          {
            "content": {
              "body": "",
              "delta": {
                "ops": [],
              },
              "title": "",
            },
            "id": "id",
            "timestamp": 0,
          },
        ],
      },
      "name": "sync_local_notes",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "username": "d",
      },
      "name": "get_access_token",
    },
  ],
  [
    "request",
    {
      "calledWith": {
        "body": "{"current_password":"1","new_password":"123456","notes":[{"id":"id","timestamp":0,"content":"content"}]}",
        "headers": {
          "Authorization": "Bearer test-token",
          "Content-Security-Policy": "default-src 'self'; connect-src http://localhost:8000;",
          "Content-Type": "application/json",
          "X-Username": "d",
        },
        "method": "PUT",
      },
      "name": "/account/change-password",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "accessToken": "test-token",
        "username": "d",
      },
      "name": "set_access_token",
    },
  ],
]
`;

exports[
  `PopupChangePassword > Validates fields and submits > document.body.outerHTML 1`
] = `"<body class="theme--system"></body>"`;

exports[`PopupChangePassword > Validates fields and submits > mockDb 1`] = `
{
  "deletedNoteIds": [],
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupChangePassword > Validates fields and submits > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    {
      "content": {
        "body": "",
        "delta": {
          "ops": [],
        },
        "title": "",
      },
      "id": "id",
      "timestamp": 0,
    },
  ],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupChangePassword > Validates fields and submits > openedPopup 1`] =
  `undefined`;

exports[`PopupChangePassword > Validates fields and submits > selectedTheme 1`] =
  `"System"`;

exports[`PopupChangePassword > Validates fields and submits > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": true,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "set": [Function],
    "size": 0,
    "store": [Function],
  },
  "username": "d",
}
`;

exports[`PopupChangePassword > Validates fields and submits > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
